# docs/swagger.json
@@ -18,7 +18,30 @@
     "host": "genapi.aduh.xyz",
     "basePath": "/",
     "paths": {
-        "/chat/completions": {
+        "/health": {
+            "get": {
+                "description": "Returns \"OK\" if the service is running properly",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health check endpoint",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/chat/completions": {
             "post": {
                 "security": [
                     {
@@ -81,30 +104,7 @@
                 }
             }
         },
-        "/health": {
-            "get": {
-                "description": "Returns \"OK\" if the service is running properly",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "health"
-                ],
-                "summary": "Health check endpoint",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/models": {
+        "/v1/models": {
             "get": {
                 "description": "Returns a list of available language models in OpenAI-compatible format",
                 "consumes": [
